force-app/main/default/objects/App_URL_Map__c/fields/App_Name__c.field-meta.xml
<CustomField>
    <fullName>App_Name__c</fullName>
    <description>Name of the external application</description>
    <encryptionScheme>None</encryptionScheme>
    <label>App Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>