force-app/main/default/objects/App_URL_Map__c/fields/Environment__c.field-meta.xml
<CustomField>
    <fullName>Environment__c</fullName>
    <description>Environment name of the external application</description>
    <label>Environment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dev</fullName>
            </value>
            <value>
                <fullName>Prod</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>