force-app/main/default/objects/App_URL_Map__c/fields/URL__c.field-meta.xml
<CustomField>
    <fullName>URL__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>URL</label>
    <type>Url</type>
</CustomField>